--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-reanimated": "~2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
