--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -17,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
