--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-swipe-list-view": "^3.2.9",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
