--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-uuid": "^2.0.1",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
