--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-uuid": "^2.0.1",
+    "react-native-wagmi-charts": "^2.1.0",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
