--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-haptic-feedback": "^1.14.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
