--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
+    "eas-cli": "^2.6.0",
     "expo": "~46.0.16",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "global": "^4.4.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
